@@ -84,7 +84,7 @@ fi
 %{_libdir}/*.la
 
 %changelog
-* Wed Dec 22 2021 - dgilbert at interlog dot com
+* Sun Dec 26 2021 - dgilbert at interlog dot com
 - track t10 changes
   * sg3_utils-1.48
 
