@@ -2,7 +2,7 @@ sg3-utils (1.48-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 22 Dec 2021 01:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 26 Dec 2021 23:00:00 -0500
 
 sg3-utils (1.47-0.1) unstable; urgency=low
 
